--- a/styles.css
+++ b/styles.css
@@ -126,10 +126,12 @@ header .wrapper {
 	display: flex;
 	flex-direction: row-reverse;
 	justify-content: flex-end;
+	width:300px;
 }
 
 #logo {
 	margin-right:20px;
+	
 }
 
 
